# CartSync

app/: pubspec.yaml
app/lib/: app.dart  helper.dart  main_scaffold.dart  widget_helper.dart
app/lib/auth/: login_page.dart  register_page.dart
app/lib/backend/: server_communicator.dart
app/lib/models/: cart.dart  friend_request.dart  item.dart  user.dart
app/lib/pages/: follow.dart  follow_page.dart  friend_page.dart  friends.dart  home.dart  home_page.dart  list_page.dart  settings.dart
app/lib/pages/auth/: login_page.dart
app/lib/pages/providers/: app_state.dart  cart_state.dart
app/lib/pages/sub_pages/: add_item_page.dart  cart_page.dart
backend/: .gitignore  app.py  config.py  dev.db  extensions.py  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  codes.py  models.py  routes.py
backend/src/: __init__.py  codes.py  config.py  extensions.py  helpers.py  models.py  queries.py  security.py
backend/src/routes/: __init__.py  auth.py  common.py
backend/tests/: test_auth.py
